<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent" >






    <EditText
        android:layout_marginTop="100dp"
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <TextView
        android:text="@string/sex"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/register_sex"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/register_man"
            android:text="@string/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/register_woman"
            android:text="@string/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"/>
    </RadioGroup>


    <EditText
        android:id="@+id/register_phoneNum"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:hint="@string/phoneNum"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_msg_ac"
            android:layout_width="200dp"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/msg_ac"/>

        <Button
            android:id="@+id/register_msg_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_get"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:text="@string/location"
            android:textSize="18dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/register_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/viliage_name">


        </Spinner>

    </LinearLayout>

    <EditText
        android:id="@+id/register_id_num"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/idNum"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_title" />

</LinearLayout>