<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:text="@string/forgethint" />

    <EditText
        android:id="@+id/forget_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_msg_ac"
            android:layout_width="200dp"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/msg_ac"/>

        <Button
            android:id="@+id/register_msg_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_get"/>

    </LinearLayout>

    <Button
        android:id="@+id/forget_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/next_step" />

</LinearLayout>